--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Default ignored files
-/.idea
 /workspace.xml
 # Editor-based HTTP Client requests
 /httpRequests/
@@ -7,5 +6,5 @@
 /dataSources/
 /dataSources.local.xml
 
-C/LV1/main.c
-C/LV1/main.exe
+.idea
+*.exe
